# flink-rs

./: .gitignore  Cargo.toml  flake.nix
examples/: cli.rs  measure.rs  suite.rs
src/: io.rs  lib.rs  measurement.rs  util.rs
src/cli/: args.rs  mod.rs  prebuilt.rs  printer.rs  types.rs
src/definition/: mod.rs  path.rs
src/io/: csv.rs  mod.rs
src/measurement/: builder.rs  config.rs  data.rs  mod.rs  run.rs  stats.rs  workload.rs
src/runner/: executor.rs  filters.rs  hooks.rs  mod.rs  results.rs
